--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <h3>LLMs for accurate timeseries prediction</h3>
       <h3>Compression of large scientific data via machine learning</h3>
       <a href="https://github.com/guozhong-li/GraphComp">GraphComp</a>
-      <h3>Analysis of spatio-temporal / GIS data using LLMs</h3>
+      <h3>Analysis of spatio-temporal / GIS data using RAG (Retrieval Augmented Generation)</h3>
 
     </section>
 
